objects/ScCollection_Contract_Summary__c.object
<CustomObject>
    <description>this object would contain the status of contracts on daily basis</description>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <description>Used when migrating records from Production to Sandboxes. Will be blank in Production, but when inserting these records into Sandbox we insert the Id from Prd into this field. This is our logical key for setting this Record in Lookups in other objects.</description>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollction_30_Rate__c</fullName>
        <description>this field would be used for reporting purpose</description>
        <formula>IF(Sum_of_0_1_2_3_4__c != 0,(( ScCollection_Sum_of_2_3_4__c / Sum_of_0_1_2_3_4__c ) ),0)</formula>
        <label>30+ Rate (Today)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollectionOver_Night_Movement_Loans__c</fullName>
        <description>PL Overnight Movement 30+ Loans = (Today&apos;s total number of PL contracts in bucket 2,3,4) - (Yesterday&apos;s total number of PL  contracts in bucket 2,3,4)</description>
        <formula>ScCollection_Count_of_2_3_4__c - ScColllection_YesterdayContractSummary__r.ScCollection_Count_of_2_3_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over Night Movement Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_30_Rate_EOM__c</fullName>
        <description>this field would pull the last month&apos;s 30+ rate</description>
        <formula>ScCollection_MonthEndContract_Summary__r.ScCollction_30_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>30+ Rate EOM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_30_Rate_Overnight_Movement__c</fullName>
        <formula>ScCollction_30_Rate__c - ScCollection_Yesterday_s_30_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>30+ Rate Overnight Movement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Count_of_2_3_4__c</fullName>
        <description>these are the contracts in bucket 2,3,4</description>
        <label>Count of 2,3,4</label>
        <summarizedField>ScCollection_Bucket_Summary__c.ScCollection_Count_of_Contracts__c</summarizedField>
        <summaryFilterItems>
            <field>ScCollection_Bucket_Summary__c.ScCollection_BucketName__c</field>
            <operation>equals</operation>
            <value>2,3,4</value>
        </summaryFilterItems>
        <summaryForeignKey>ScCollection_Bucket_Summary__c.ScCollection_Contract_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ScCollection_Day__c</fullName>
        <label>Day</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Dollar_Reduction_Required__c</fullName>
        <formula>ScCollection_Percent_Reduction_Required__c *  ScCollection_Total_Balance_Today__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reduction Required ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_EOM_Movement__c</fullName>
        <formula>ScCollction_30_Rate__c - ScCollection_30_Rate_EOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EOM Movement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Funder_Bank_Name__c</fullName>
        <formula>ScCollection_Funders_Target__r.ScCollection_Bank_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funder/Bank Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Funders_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funders Target</label>
        <referenceTo>ScCollection_Funders_Target__c</referenceTo>
        <relationshipLabel>Contract Summarys</relationshipLabel>
        <relationshipName>Contract_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_MonthEndContract_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field  would tag the month end contract summary to to today&apos;s record</description>
        <label>Month&apos;s End Contract Summary</label>
        <referenceTo>ScCollection_Contract_Summary__c</referenceTo>
        <relationshipLabel>Contract Summarys (Month&apos;s End Contract Summary)</relationshipLabel>
        <relationshipName>Contract_Summarys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Over_Night_Movement__c</fullName>
        <description>Overnight Movement 30+ Balance = (Today&apos;s total balance of contracts in bucket 2,3,4) - (Yesterday&apos;s total balance of contracts in bucket 2,3,4)</description>
        <formula>ScCollection_Sum_of_2_3_4__c -  ScColllection_YesterdayContractSummary__r.ScCollection_Sum_of_2_3_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over Night Movement Balances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Percent_Reduction_Required__c</fullName>
        <formula>ScCollction_30_Rate__c - ScCollection_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Reduction Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_SourceName__c</fullName>
        <description>this field would contain the Source Name of the contract</description>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Source_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source System</label>
        <referenceTo>collect__Source_System__c</referenceTo>
        <relationshipLabel>Contract Summarys</relationshipLabel>
        <relationshipName>Contract_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Sum_of_1_2_3_4__c</fullName>
        <label>30+ Balances</label>
        <summarizedField>ScCollection_Bucket_Summary__c.ScCollection_Current_Balance_Sum__c</summarizedField>
        <summaryFilterItems>
            <field>ScCollection_Bucket_Summary__c.ScCollection_BucketName__c</field>
            <operation>equals</operation>
            <value>1,2,3,4</value>
        </summaryFilterItems>
        <summaryForeignKey>ScCollection_Bucket_Summary__c.ScCollection_Contract_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ScCollection_Sum_of_2_3_4__c</fullName>
        <label>Sum of 2,3,4</label>
        <summarizedField>ScCollection_Bucket_Summary__c.ScCollection_Current_Balance_Sum__c</summarizedField>
        <summaryFilterItems>
            <field>ScCollection_Bucket_Summary__c.ScCollection_BucketName__c</field>
            <operation>equals</operation>
            <value>2,3,4</value>
        </summaryFilterItems>
        <summaryForeignKey>ScCollection_Bucket_Summary__c.ScCollection_Contract_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ScCollection_Target_Difference__c</fullName>
        <formula>ScCollction_30_Rate__c - ScCollection_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Target__c</fullName>
        <formula>ScCollection_Funders_Target__r.ScCollection_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Balance_Today__c</fullName>
        <description>this field would sumup the balance of all the contracts  for the day</description>
        <label>Total Balances</label>
        <summarizedField>ScCollection_Bucket_Summary__c.ScCollection_Current_Balance_Sum__c</summarizedField>
        <summaryForeignKey>ScCollection_Bucket_Summary__c.ScCollection_Contract_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Contracts_today__c</fullName>
        <description>this field would sumup all the number of contract for the day</description>
        <label>Total Accounts</label>
        <summarizedField>ScCollection_Bucket_Summary__c.ScCollection_Count_of_Contracts__c</summarizedField>
        <summaryForeignKey>ScCollection_Bucket_Summary__c.ScCollection_Contract_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ScCollection_Yesterday_s_30_Rate__c</fullName>
        <description>this field would bring in the yesterday&apos;s 30 + rate</description>
        <formula>ScColllection_YesterdayContractSummary__r.ScCollction_30_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>30+ Rate (Yesterday)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScColllection_YesterdayContractSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field would tag yesterday&apos;s summary to today&apos;s record</description>
        <label>Yesterday Contract Summary</label>
        <referenceTo>ScCollection_Contract_Summary__c</referenceTo>
        <relationshipLabel>Contract Summarys</relationshipLabel>
        <relationshipName>Contract_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_of_0_1_2_3_4__c</fullName>
        <label>Sum of 0,1,2,3,4</label>
        <summarizedField>ScCollection_Bucket_Summary__c.ScCollection_Current_Balance_Sum__c</summarizedField>
        <summaryFilterItems>
            <field>ScCollection_Bucket_Summary__c.ScCollection_BucketName__c</field>
            <operation>equals</operation>
            <value>0,1,2,3,4</value>
        </summaryFilterItems>
        <summaryForeignKey>ScCollection_Bucket_Summary__c.ScCollection_Contract_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Contract Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScCollection_Funder_Bank_Name__c</columns>
        <columns>ScCollection_Source_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Contract Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>